--- a/bioschemas_shacl/requirements.txt
+++ b/bioschemas_shacl/requirements.txt
@@ -3,23 +3,68 @@
 # platform: linux-64
 _libgcc_mutex=0.1=conda_forge
 _openmp_mutex=4.5=1_gnu
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+beautifulsoup4=4.10.0=pypi_0
+brotlipy=0.7.0=py39h3811e60_1003
 ca-certificates=2021.10.8=ha878542_0
+certifi=2021.10.8=pypi_0
+cffi=1.14.6=py39he32792d_0
+chardet=4.0.0=py39hf3d152e_2
+charset-normalizer=2.0.7=pypi_0
+colorama=0.4.4=pyh9f0ad1d_0
+configparser=5.1.0=pyhd8ed1ab_0
+crayons=0.4.0=pyh9f0ad1d_0
+cryptography=35.0.0=py39h95dcef6_2
+extruct=0.13.0=pypi_0
+html-text=0.5.2=pypi_0
+html5lib=1.1=pyh9f0ad1d_0
+idna=3.3=pypi_0
+importlib-metadata=4.8.2=py39hf3d152e_0
+isodate=0.6.0=pypi_0
+jinja2=3.0.2=pyhd8ed1ab_0
+jstyleson=0.0.2=pypi_0
+keepalive=0.5=pyhd8ed1ab_6
 ld_impl_linux-64=2.36.1=hea4e1c9_2
 libffi=3.3=h58526e2_2
 libgcc-ng=11.2.0=h1d223b6_11
 libgomp=11.2.0=h1d223b6_11
 libstdcxx-ng=11.2.0=he4da1e4_11
 libzlib=1.2.11=h36c2ea0_1013
+lxml=4.6.4=pypi_0
+markupsafe=2.0.1=py39h3811e60_1
+mf2py=1.1.2=pypi_0
 ncurses=6.2=h58526e2_4
 openssl=1.1.1l=h7f98852_0
+owlrl=5.2.3=pyhd8ed1ab_0
 pip=21.3.1=pyhd8ed1ab_0
+prettytable=2.4.0=pyhd8ed1ab_0
+pycparser=2.21=pyhd8ed1ab_0
+pyopenssl=21.0.0=pyhd8ed1ab_0
+pyparsing=3.0.5=pyhd8ed1ab_0
+pyrdfa3=3.5.3=pypi_0
+pyshacl=0.17.2=pyhd8ed1ab_0
+pysocks=1.7.1=py39hf3d152e_4
 python=3.9.0=hffdb5ce_5_cpython
 python_abi=3.9=2_cp39
+rdflib=6.0.2=py39hf3d152e_0
+rdflib-jsonld=0.6.2=pypi_0
 readline=8.1=h46c0cb4_0
+requests=2.26.0=pypi_0
+selenium=3.141.0=py39h3811e60_1002
 setuptools=58.5.3=py39hf3d152e_0
+six=1.16.0=pyh6c4a22f_0
+soupsieve=2.3=pypi_0
+sparqlwrapper=1.8.5=py39hf3d152e_1006
 sqlite=3.36.0=h9cd32fc_2
 tk=8.6.11=h27826a3_1
 tzdata=2021e=he74cb21_0
+urllib3=1.26.7=pyhd8ed1ab_0
+w3lib=1.22.0=pypi_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webdriver-manager=3.5.2=pyhd8ed1ab_0
+webencodings=0.5.1=pypi_0
 wheel=0.37.0=pyhd8ed1ab_1
 xz=5.2.5=h516909a_1
+zipp=3.6.0=pyhd8ed1ab_0
 zlib=1.2.11=h36c2ea0_1013
