--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-python=3.9.0
-jinja2=3.0.2
-lxml=4.6.4
-rdflib=6.0.2
-rdflib-jsonld=0.6.2
-pyshacl=0.17.2
-webdriver-manager=3.5.2
-selenium=3.141.0
-requests=2.26.0
-extruct=0.13.0
+python==3.9.0
+jinja2==3.0.2
+lxml==4.6.4
+rdflib==6.0.2
+rdflib-jsonld==0.6.2
+pyshacl==0.17.2
+webdriver-manager==3.5.2
+selenium==3.141.0
+requests==2.26.0
+extruct==0.13.0
